# kexec-menu

./: .gitignore  Cargo.toml  Makefile  PKGBUILD  README.md  default.nix  package.nix  shell.nix
.github/workflows/: ci.yml
crates/kexec-menu/: Cargo.toml
crates/kexec-menu-core/: Cargo.toml  build.rs
crates/kexec-menu-core/src/: evdev.rs  kexec.rs  lib.rs  mount.rs  select.rs  tree.rs  tui.rs  types.rs
crates/kexec-menu/src/: main.rs
docs/: spec.md
modules/: nixos.nix  stylix.nix
npins/: sources.json
scripts/: mkbcachefs.sh  mkbusybox.sh  mkinitrd.sh  mkkernel.sh  mklogo.sh
tests/nixos/: installer.nix
tests/qemu/: create-test-disk.sh  init-test.sh  init.sh  integration-test.sh  run.sh  shell.nix  test.nix
uki/: uki.nix
uki/initrd/: busybox.config  init  initrd.nix
uki/kernel/: aarch64.config  common.config  kernel.nix  source.nix  x86_64.config
uki/logo/: logo.nix
